--- a/index.html
+++ b/index.html
@@ -10,11 +10,30 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                <p>Onavegador não é compativel</p>
+            </iframe>
         </section>  
 
         <section id="redes-sociais">
-
+            <a href="" target="tela"> 
+                <img src="imagens/logo-home.jpg" alt="home">
+            </a>
+            <a href="" target="tela">
+                <img src="imagens/logo-youtube.jpg" alt=" logo-youtube">
+            </a>
+            <a href="" target="tela">
+                <img src="imagens/logo-github.jpg" alt="logo-github">
+            </a>
+            <a href="" target="tela">
+                <img src="imagens/logo-instagram.jpg" alt="logo-instagram">
+            </a>
+            <a href="" target="tela">
+                <img src="imagens/logo-facebook.jpg" alt="logo-facebook">
+            </a>
+            <a href="" target="tela">
+                <img src="imagens/logo-twitter.jpg" alt="logo-twitter">
+            </a>
         </section>
     </main>
 </body>
