--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
         </section>  
 
         <section id="redes-sociais">
-            <a href="" target="tela"> 
+            <a href="home.html" target="tela"> 
                 <img src="imagens/logo-home.jpg" alt="home">
             </a>
-            <a href="" target="tela">
+            <a href="youtube.html" target="tela">
                 <img src="imagens/logo-youtube.jpg" alt=" logo-youtube">
             </a>
-            <a href="" target="tela">
+            <a href="github.html" target="tela">
                 <img src="imagens/logo-github.jpg" alt="logo-github">
             </a>
-            <a href="" target="tela">
+            <a href="instagram.html" target="tela">
                 <img src="imagens/logo-instagram.jpg" alt="logo-instagram">
             </a>
-            <a href="" target="tela">
+            <a href="facebook.html" target="tela">
                 <img src="imagens/logo-facebook.jpg" alt="logo-facebook">
             </a>
-            <a href="" target="tela">
+            <a href="twiter.html" target="tela">
                 <img src="imagens/logo-twitter.jpg" alt="logo-twitter">
             </a>
         </section>
